finished second body. Had items listed as <ul> and could not get things to align correctly. Restarted and broke everything into their own div class

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+body {
+    margin: -5px; 
+}
 
 .header {
     display: flex; 
@@ -10,6 +12,11 @@
 }
 
 
+
+li {
+    list-style: none; 
+    text-decoration: none; 
+}
 
 .logo{
     font-weight: bold; 
@@ -30,14 +37,6 @@
     gap: 19px; 
 }
 
-li {
-    list-style: none; 
-}
-
-.body-container {
-    background-color: grey; 
-}
-
 .body-one {
     background-color: #1F2937;
     display: flex; 
@@ -45,6 +44,7 @@ li {
     align-items: center; 
     padding: 40px; 
     gap: 120px;
+    
 
 }
 
@@ -55,6 +55,10 @@ li {
     
 }
 
+
+.body-one-right {
+    display: flex; 
+}
 
 .text-one {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -80,4 +84,36 @@ li {
 img {
     height: 250px;
     width: 375px; 
+}
+
+
+.body-two-title {  
+    font-size: 36px; 
+    font-weight: 900; 
+    text-align: center; 
+    padding: 40px; 
+    
+}
+
+.body-two {
+    display: flex; 
+    justify-content: center; 
+    gap: 100px; 
+}
+
+.info {
+    max-width: 100px; 
+    text-align: center; 
+    padding-bottom: 45px; 
+    
+   
+}
+
+.travel {
+    width: 75px; 
+    height: 75px; 
+}
+
+.travel-info-text {
+    padding: 10px; 
 }
